# pdf-reader

./: .env.example  .gitignore  LICENSE  README.cn.md  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: 01-project-structure.mdc  02-pdf-reader-core.mdc  03-csv-tool.mdc  04-prompts-and-resources.mdc  05-core-modules.mdc  06-testing-guidelines.mdc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: chat.ipynb  csv_process.ipynb  save_csv.ipynb
pdf_reader/: base.py  csvtool.py  db.py  filebucket.py  llms.py  rag.py  readimgs.py  readtable.py  tracing.py  utils.py
resources/: prompt-init.txt  question.txt  split-csv.txt  table-format.txt  test.txt
runner/: __init__.py  oi.py
tests/: test_csv_tool.py  test_db.py  test_filebucket.py  test_langfuse.py  test_langfuse_2.py  test_langsmith.py  test_oneapi.py  test_openai.py  test_utils.py
